i dont know what i did

--- a/web/core/templates/core/home.html
+++ b/web/core/templates/core/home.html
@@ -44,10 +44,11 @@
       <!--==================== HOME ====================-->
       <section class="home" id="home">
         <div class="home__container container grid">
-            <div class="home__img">
+            <img src="https://v1.cybersafecal.com/assets/img/body.jpg" alt="" class="home__img">
+            <!-- <div class="home__img" >
                 <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_au4zdsr8.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay ></lottie-player>
             
-            </div>    
+            </div>     -->
             <div class="home__data">
                 <h1 class="home__title">
                     Team MegaXord Projects <br> 
@@ -77,7 +78,7 @@
             </div>
         </div>
     </section>
-        <section class="contact section container" id="home">
+    <section class="contact section container" id="home">
            <div class="home__container container grid">
 
                <div class="home__data">
@@ -88,7 +89,7 @@
                       We analyse your passage, set and answer questions for you <br>Paste passage or upload the file
                    </p>
 
-       </section>
+    </section>
           <!--==================== CONTACT ====================-->
           <section class="contact section container" id="contact">
            <div class="contact__container grid">
@@ -116,7 +117,7 @@
                    </div>
                     <div class="button" onclick="changeValue()">
                    <button id="contact" onclick="BtnContact(event)" class="spam-btn button button--flex">
-                       Analyse
+                       Generate Questions
                        <i class="ri-arrow-right-up-line button__icon"></i>
                    </button>
                    </div>
@@ -136,11 +137,11 @@
                 
                             <span class="contact__description">
                                <i class="ri-twitter-fill contact__icon"></i>
-                              <a href="http://twitter.com/1madvirus">Team MegaXord</a> 
+                              <a href="">Team MegaXord</a> 
                            </span><br>
                             <span class="contact__description">
                                <i class="ri-github-fill contact__icon"></i>
-                              <a href="http://github.com/madvirus-ops">Team MegaXord</a> 
+                              <a href="">Team MegaXord</a> 
                            </span>
                            
                        </div>
