--- a/web/core/templates/core/details.html
+++ b/web/core/templates/core/details.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -188,7 +189,6 @@
           <div
             class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
           >
-            Announcing our next round of funding.
             <a href="#" class="font-semibold text-indigo-600"
               ><span class="absolute inset-0" aria-hidden="true"></span>Read
               more <span aria-hidden="true">&rarr;</span></a
@@ -261,74 +261,49 @@
   }
   ``` -->
 
-    <form action="#" class="relative">
-      <div
-        class="overflow-hidden rounded-lg border border-gray-300 shadow-sm focus-within:border-indigo-500 focus-within:ring-1 focus-within:ring-indigo-500"
-      >
-        <label for="title" class="sr-only">Title</label>
-        <input
-          type="text"
-          name="title"
-          id="title"
-          class="block w-full border-0 pt-2.5 text-lg font-medium placeholder:text-gray-400 focus:ring-0"
-          placeholder="Title"
-        />
-        <label for="description" class="sr-only">Description</label>
-        <textarea
-          rows="2"
-          name="description"
-          id="description"
-          class="block w-full resize-none border-0 py-0 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6"
-          placeholder="Write a description..."
-        ></textarea>
-
-        <!-- Spacer element to match the height of the toolbar -->
-        <div aria-hidden="true">
-          <div class="py-2">
-            <div class="h-9"></div>
+  <div class="bg-white py-24 sm:py-32">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl text-center">
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">From the blog</h2>
+        <p class="mt-2 text-lg leading-8 text-gray-600">Learn how to grow your business with our expert advice.</p>
+      </div>
+      <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+        <article class="flex flex-col items-start justify-between">
+          <div class="relative w-full">
+            <img src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80" alt="" class="aspect-[16/9] w-full rounded-2xl bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
+            <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
           </div>
-          <div class="h-px"></div>
-          <div class="py-2">
-            <div class="py-px">
-              <div class="h-9"></div>
+          <div class="max-w-xl">
+            <div class="mt-8 flex items-center gap-x-4 text-xs">
+              <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
+              <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+            </div>
+        {% for obj in questions %}
+            <div class="group relative">
+              <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  {{obj.question}}
+                </a>
+              </h3>
+              <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">{{obj.answer}}</p>
+            </div>
+            <div class="relative mt-8 flex items-center gap-x-4">
+              <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-100">
+              <div class="text-sm leading-6">
+                <p class="font-semibold text-gray-900">
+                  <a href="#">
+                    <span class="absolute inset-0"></span>
+                    Michael Foster
+                  </a>
+                </p>
+                <p class="text-gray-600">Co-Founder / CTO</p>
+              </div>
             </div>
           </div>
-        </div>
+        </article>
+        {% endfor %}
+        <!-- More posts... -->
       </div>
-      <div
-        class="flex items-center justify-between space-x-3 border-t border-gray-200 px-2 py-2 sm:px-3"
-      >
-        <div class="flex">
-          <button
-            type="button"
-            class="group -my-2 -ml-2 inline-flex items-center rounded-full px-3 py-2 text-left text-gray-400"
-          >
-            <svg
-              class="-ml-1 mr-2 h-5 w-5 group-hover:text-gray-500"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z"
-                clip-rule="evenodd"
-              />
-            </svg>
-            <span class="text-sm italic text-gray-500 group-hover:text-gray-600"
-              >Attach a file</span
-            >
-          </button>
-        </div>
-        <div class="flex-shrink-0">
-          <button
-            type="submit"
-            class="inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-          >
-            Create
-          </button>
-        </div>
-      </div>
-    </form>
-  </body>
-</html>
+    </div>
+  </div>
