context and passage

--- a/web/core/templates/core/home.html
+++ b/web/core/templates/core/home.html
@@ -86,7 +86,7 @@
                        Hackathon hehe <br> 
                    </h1>
                    <p class="home__description">
-                      We analyse your passage, set and answer questions for you <br>Paste passage or upload the file
+                      We analyse your passage, set and answer questions for you <br>
                    </p>
 
     </section>
@@ -100,18 +100,18 @@
 
                        <div class="contact__content">
                            <input type="text" name="title" placeholder="" id="title" class="contact__input">
-                           <label for="" class="contact__label">Title of Passage</label>
+                           <label for="" class="contact__label">Context </label>
                        </div>
 
                        <div class="contact__content contact__area">
                         <textarea name="passage" placeholder=" " id="passage" class="contact__input"></textarea>
                         <label for="" class="contact__label">Paste the entire passage</label>
                     </div>
-                            <p>or</p>
+                            <!-- <p>or</p>
                        <div class="contact__content">
                            <input type="file" name="files"  id="files" class="contact__input">
                            <label for="" class="contact__label">Pick File</label>
-                       </div>
+                       </div> -->
             
                        
                    </div>
