reset folder structure

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -94,7 +94,7 @@
           <section class="contact section container" id="contact">
            <div class="contact__container grid">
                <div class="contact__box">
-               <div  class="contact__form">
+               <form method="post"  class="contact__form">
                    <div class="contact__inputs">
 
 
@@ -121,7 +121,7 @@
                        <i class="ri-arrow-right-up-line button__icon"></i>
                    </button>
                    </div>
-               </div>
+               </form>
                <div class="contact__data">
                        <div class="contact__information">
                            <h3 class="contact__subtitle">
