--- a/core/templates/core/details.html
+++ b/core/templates/core/details.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     {% for question in questions %}
+      
     <div class="block">
       <div class="card">
           <div class="card-content">
@@ -34,7 +35,24 @@
     </div>
   
     {% endfor %}
-
+    <!-- {% for answer in answers %}
+      
+    <div class="block">
+      <div class="card">
+          <div class="card-content">
+          <div class="media">
+              <div class="media-content">
+                <p>
+                    {{ answer}}
+                </p>
+              </div>
+          </div>
+          </div>
+      </div>
+    </div>
+  
+    {% endfor %} -->
+    
     
 
   </body>
