working on margin

--- a/core/templates/core/details.html
+++ b/core/templates/core/details.html
@@ -46,7 +46,7 @@
       for (var i = 0; i < questions.length; i++) {
           var question = questions[i];
           if (!addedQuestions.includes(question)) {
-              var block = $('<div class="block"></div>');
+              var block = $('<div class="block mb-small"></div>');
               var card = $('<div class="card"></div>');
               var cardContent = $('<div class="card-content"></div>');
               var media = $('<div class="media"></div>');
@@ -76,7 +76,7 @@
       for (var i = 0; i < answers.length; i++) {
         var answer = answers[i];
         if (!addedAswers.includes(answer)){
-          var block = $('<div class="block"></div>');
+          var block = $('<div class="block mb-small"></div>');
           var card = $('<div class="card"></div>');
           var cardContent = $('<div class="card-content"></div>');
           var media = $('<div class="media"></div>');
